--- a/index.html
+++ b/index.html
@@ -696,10 +696,10 @@
                     <div class="footer-logo" style="font-size: 28px;">Анти<span>Долги</span></div>
                     <p class="footer-description">Профессиональная помощь в процедуре банкротства физических лиц. Бесплатная консультация и оценка вашей ситуации</p>
                     <div style="display: flex; gap: 15px; margin-top: 20px;">
-                        <a href="https://vk.com/antidolgi24" target="_blank" style="display: flex; align-items: center; justify-content: center; width: 40px; height: 40px; background: #4A76A8; border-radius: 50%; color: white; text-decoration: none;">
+                        <a href="https://vk.com/antidolgim" target="_blank" style="display: flex; align-items: center; justify-content: center; width: 40px; height: 40px; background: #4A76A8; border-radius: 50%; color: white; text-decoration: none;">
                             <span style="font-weight: bold;">ВК</span>
                         </a>
-                        <a href="https://t.me/antidolgi24" target="_blank" style="display: flex; align-items: center; justify-content: center; width: 40px; height: 40px; background: #26A5E4; border-radius: 50%; color: white; text-decoration: none;">
+                        <a href="https://T.me/Simanovlaw" target="_blank" style="display: flex; align-items: center; justify-content: center; width: 40px; height: 40px; background: #26A5E4; border-radius: 50%; color: white; text-decoration: none;">
                             <span style="font-weight: bold;">ТГ</span>
                         </a>
                     </div>
