--- a/index.html
+++ b/index.html
@@ -614,6 +614,7 @@
                         <label for="email">Email (необязательно)</label>
                         <input type="email" id="email" name="email" placeholder="example@email.com">
                     </div>
+                    <input type="hidden" name="message" value="Заявка с сайта АнтиДолги">
                     <button type="submit" class="btn btn-primary" style="width: 100%;">Получить консультацию</button>
                 </form>
                 
