--- a/index.html
+++ b/index.html
@@ -404,32 +404,6 @@
             font-size: 14px;
             box-sizing: border-box;
         }
-        /* Мгновенный результат */
-        .instant-result {
-            background-color: white;
-            border-radius: 15px;
-            padding: 30px;
-            margin-top: 30px;
-            display: none;
-        }
-        .instant-result h3 {
-            text-align: center;
-            margin-bottom: 20px;
-            color: var(--primary-blue);
-        }
-        .instant-result-item {
-            display: flex;
-            justify-content: space-between;
-            padding: 12px 0;
-            border-bottom: 1px solid #eee;
-        }
-        .instant-result-item:last-child {
-            border-bottom: none;
-        }
-        .instant-result-label {
-            font-weight: 500;
-            color: var(--medium-gray);
-        }
         /* Адаптивность */
         @media (max-width: 768px) {
             .hero h1 {
@@ -558,6 +532,8 @@
                 <div class="error-message" id="errorMessage">
                     Произошла ошибка при отправке заявки. Пожалуйста, попробуйте позже.
                 </div>
+                
+                <!-- ФОРМА (ТОЛЬКО ПОЛЯ ФОРМЫ) -->
                 <form id="leadForm" action="https://formspree.io/f/xkgzaqag" method="POST">
                     <input type="hidden" name="debtAmount" id="formDebtAmount">
                     <input type="hidden" name="savingsAmount" id="formSavingsAmount">
@@ -582,30 +558,32 @@
         </div>
     </section>
 
-    <!-- МГНОВЕННЫЙ РЕЗУЛЬТАТ (ВНЕ ФОРМЫ) -->
-    <div class="instant-result" id="instantResultFinal" style="background-color: white; border-radius: 15px; padding: 30px; margin-top: 30px; display: none;">
-        <h3 style="text-align: center; margin-bottom: 20px; color: var(--primary-blue);">Ваша индивидуальная стратегия</h3>
-        <div class="instant-result-item">
-            <span class="instant-result-label">Сумма долга:</span>
-            <span style="font-weight: 600; color: var(--primary-blue);" id="resultDebt">—</span>
+    <!-- МГНОВЕННЫЙ РЕЗУЛЬТАТ ВЫНЕСЕН ЗА ПРЕДЕЛЫ ФОРМЫ -->
+    <div class="container">
+        <div class="instant-result" id="instantResultFinal" style="background-color: white; border-radius: 15px; padding: 30px; margin-top: 30px; display: none;">
+            <h3 style="text-align: center; margin-bottom: 20px; color: var(--primary-blue);">Ваша индивидуальная стратегия</h3>
+            <div style="display: flex; justify-content: space-between; padding: 12px 0; border-bottom: 1px solid #eee;">
+                <span style="font-weight: 500; color: var(--medium-gray);">Сумма долга:</span>
+                <span style="font-weight: 600; color: var(--primary-blue);" id="resultDebt">—</span>
+            </div>
+            <div style="display: flex; justify-content: space-between; padding: 12px 0; border-bottom: 1px solid #eee;">
+                <span style="font-weight: 500; color: var(--medium-gray);">Ваша выгода:</span>
+                <span style="font-weight: 600; color: var(--primary-blue);" id="resultSavings">—</span>
+            </div>
+            <div style="display: flex; justify-content: space-between; padding: 12px 0; border-bottom: 1px solid #eee;">
+                <span style="font-weight: 500; color: var(--medium-gray);">Шанс успеха:</span>
+                <span style="font-weight: 600; color: var(--primary-blue);">92%</span>
+            </div>
+            <div style="display: flex; justify-content: space-between; padding: 12px 0; border-bottom: 1px solid #eee;">
+                <span style="font-weight: 500; color: var(--medium-gray);">Срок процедуры:</span>
+                <span style="font-weight: 600; color: var(--primary-blue);">от 6 месяцев</span>
+            </div>
+            <div style="display: flex; justify-content: space-between; padding: 12px 0;">
+                <span style="font-weight: 500; color: var(--medium-gray);">Стоимость услуг:</span>
+                <span style="font-weight: 600; color: var(--primary-blue);" id="resultCost">от 150 000 ₽</span>
+            </div>
+            <a href="https://antidolgi24.ru" target="_blank" class="btn btn-primary" style="width: 100%; margin-top: 20px;">Подробнее на antidolgi24.ru</a>
         </div>
-        <div class="instant-result-item">
-            <span class="instant-result-label">Ваша выгода:</span>
-            <span style="font-weight: 600; color: var(--primary-blue);" id="resultSavings">—</span>
-        </div>
-        <div class="instant-result-item">
-            <span class="instant-result-label">Шанс успеха:</span>
-            <span style="font-weight: 600; color: var(--primary-blue);">92%</span>
-        </div>
-        <div class="instant-result-item">
-            <span class="instant-result-label">Срок процедуры:</span>
-            <span style="font-weight: 600; color: var(--primary-blue);">от 6 месяцев</span>
-        </div>
-        <div class="instant-result-item">
-            <span class="instant-result-label">Стоимость услуг:</span>
-            <span style="font-weight: 600; color: var(--primary-blue);" id="resultCost">от 150 000 ₽</span>
-        </div>
-        <a href="https://antidolgi24.ru" target="_blank" class="btn btn-primary" style="width: 100%; margin-top: 20px;">Подробнее на antidolgi24.ru</a>
     </div>
 
     <!-- Отзывы из соцсетей -->
